@@ -16,6 +16,12 @@ Release date: TBA
 
   Closes #85, #2615
 
+* Fixed false negative for ``used-before-assignment`` when a conditional
+  or context manager intervened before the try statement that suggested
+  it might fail.
+
+  Closes #4045
+
 * Fixed extremely long processing of long lines with comma's.
 
   Closes #5483
